# xfig-slides

./: CHANGES  INSTALL  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  update-version_m4  version.m4
Libraries/Maps/Asia/: india.fig
app-defaults/: Fig  Fig.in
doc/: FORMAT3.2  Makefile.am  Makefile.in  xfig.man.in  xfig_man.html.in
doc/html/: attributes.html  bugs_fixed.html  drawing.html  editing.html  global_settings.html  installation.html  introduction.html  latex_and_xfig.html  main_menus.html  miscellaneous.html  new_features.html  options.html  printing.html
doc/html/images/: xfig-title.fig
m4/: tl_check_header_path.m4  tl_search_libs_path.m4
splash-image/: spl_bckgnd.fig
src/: Makefile.am  Makefile.in  d_subspline.c  dirstruct.h  e_align.c  e_break.c  e_chop.c  e_compound.c  e_delete.c  e_edit.c  e_glue.c  e_placelib.c  e_update.c  f_load.c  f_read.c  f_save.c  f_util.c  fig.h  main.c  mode.c  mode.h  object.h  resources.c  resources.h  splash.xbm  splash.xpm  u_bound.c  u_create.c  u_draw.c  u_list.c  u_list.h  u_markers.c  u_print.c  u_redraw.c  u_search.c  u_search.h  u_undo.c  version.xbm  w_canvas.c  w_cmdpanel.c  (+21 more)
tests/: Makefile.am  Makefile.in  atlocal.in  package.m4  testsuite  testsuite.at
